# zpython

./: .hgignore  CMakeLists.txt  README.md  process_zsh_header.sh
cmake/: FindZsh.cmake
config/: config.h.in
doc/: zpython.yo
gentoo/zpython/: zpython-9999.ebuild
gentoo/zsh/: zsh-5.0.5.ebuild
src/: zpython.c
test/: V09zpython.ztst  runtest.zsh  ztst.zsh  ztstutil.py
